@@ -96,6 +96,7 @@ import org.apache.iceberg.view.BaseViewOperations;
 import org.apache.iceberg.view.ViewBuilder;
 import org.apache.iceberg.view.ViewMetadata;
 import org.apache.iceberg.view.ViewMetadataParser;
+import org.apache.iceberg.view.ViewOperations;
 import org.apache.iceberg.view.ViewUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.TestOnly;
@@ -109,7 +110,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private static final Logger LOGGER = LoggerFactory.getLogger(BasePolarisCatalog.class);
 
   private static final Joiner SLASH = Joiner.on("/");
-  private static final Joiner DOT = Joiner.on(".");
 
   // Config key for whether to allow setting the FILE_IO_IMPL using catalog properties. Should
   // only be allowed in dev/test environments.
@@ -117,19 +117,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private static final int MAX_RETRIES = 12;
 
   static final Predicate<Exception> SHOULD_RETRY_REFRESH_PREDICATE =
-      new Predicate<Exception>() {
-        @Override
-        public boolean test(Exception ex) {
-          // Default arguments from BaseMetastoreTableOperation only stop retries on
-          // NotFoundException. We should more carefully identify the set of retriable
-          // and non-retriable exceptions here.
-          return !(ex instanceof NotFoundException)
-              && !(ex instanceof IllegalArgumentException)
-              && !(ex instanceof AlreadyExistsException)
-              && !(ex instanceof ForbiddenException)
-              && !(ex instanceof UnprocessableEntityException)
-              && isStorageProviderRetryableException(ex);
-        }
+      ex -> {
+        // Default arguments from BaseMetastoreTableOperation only stop retries on
+        // NotFoundException. We should more carefully identify the set of retriable
+        // and non-retriable exceptions here.
+        return !(ex instanceof NotFoundException)
+            && !(ex instanceof IllegalArgumentException)
+            && !(ex instanceof AlreadyExistsException)
+            && !(ex instanceof ForbiddenException)
+            && !(ex instanceof UnprocessableEntityException)
+            && isStorageProviderRetryableException(ex);
       };
   public static final String CLEANUP_ON_NAMESPACE_DROP = "CLEANUP_ON_NAMESPACE_DROP";
 
@@ -141,7 +138,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private final AuthenticatedPolarisPrincipal authenticatedPrincipal;
   private String ioImplClassName;
   private FileIO catalogFileIO;
-  private String catalogName;
+  private final String catalogName;
   private long catalogId = -1;
   private String defaultBaseLocation;
   private CloseableGroup closeableGroup;
@@ -351,8 +348,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                 })
             .orElse(Map.of());
     PolarisMetaStoreManager.DropEntityResult dropEntityResult =
-        dropTableLike(
-            catalogId, PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
+        dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
     if (!dropEntityResult.isSuccess()) {
       return false;
     }
@@ -376,7 +372,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list tables for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.TABLE, namespace);
+    return listTableLike(PolarisEntitySubType.TABLE, namespace);
   }
 
   @Override
@@ -385,7 +381,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.TABLE, from, to);
+    renameTableLike(PolarisEntitySubType.TABLE, from, to);
   }
 
   @Override
@@ -526,11 +522,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   @Override
   public boolean namespaceExists(Namespace namespace) {
-    PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
-    if (resolvedEntities == null) {
-      return false;
-    }
-    return true;
+    return resolvedEntityView.getResolvedPath(namespace) != null;
   }
 
   @Override
@@ -700,18 +692,17 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list views for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.VIEW, namespace);
+    return listTableLike(PolarisEntitySubType.VIEW, namespace);
   }
 
   @Override
-  protected BasePolarisViewOperations newViewOps(TableIdentifier identifier) {
+  protected ViewOperations newViewOps(TableIdentifier identifier) {
     return new BasePolarisViewOperations(catalogFileIO, identifier);
   }
 
   @Override
   public boolean dropView(TableIdentifier identifier) {
-    return dropTableLike(catalogId, PolarisEntitySubType.VIEW, identifier, Map.of(), true)
-        .isSuccess();
+    return dropTableLike(PolarisEntitySubType.VIEW, identifier, Map.of(), true).isSuccess();
   }
 
   @Override
@@ -720,14 +711,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.VIEW, from, to);
+    renameTableLike(PolarisEntitySubType.VIEW, from, to);
   }
 
   @Override
   public boolean sendNotification(
       TableIdentifier identifier, NotificationRequest notificationRequest) {
     return sendNotificationForTableLike(
-        catalogId, PolarisEntitySubType.TABLE, identifier, notificationRequest);
+        PolarisEntitySubType.TABLE, identifier, notificationRequest);
   }
 
   @Override
@@ -962,7 +953,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // namespaces
     Optional<NamespaceEntity> parentNamespace =
         parentPath.size() > 1
-            ? Optional.of(NamespaceEntity.of(parentPath.get(parentPath.size() - 1)))
+            ? Optional.of(NamespaceEntity.of(parentPath.getLast()))
             : Optional.empty();
 
     List<TableIdentifier> siblingTables =
@@ -988,7 +979,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                       .collect(Collectors.toList());
                 })
             .orElse(List.of());
-    ;
 
     List<Namespace> siblingNamespaces =
         siblingNamespacesResult.getEntities().stream()
@@ -1002,13 +992,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                   newLevels[nsLevels.length] = ns.getName();
                   return Namespace.of(newLevels);
                 })
-            .collect(Collectors.toList());
+            .toList();
     LOGGER.debug(
         "Resolving {} sibling entities to validate location",
         siblingTables.size() + siblingNamespaces.size());
     PolarisResolutionManifest resolutionManifest =
         new PolarisResolutionManifest(
-            callContext, entityManager, authenticatedPrincipal, parentPath.get(0).getName());
+            callContext, entityManager, authenticatedPrincipal, parentPath.getFirst().getName());
     siblingTables.forEach(
         tbl ->
             resolutionManifest.addPath(
@@ -1060,11 +1050,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   private class BasePolarisCatalogTableBuilder
       extends BaseMetastoreViewCatalog.BaseMetastoreViewCatalogTableBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogTableBuilder(TableIdentifier identifier, Schema schema) {
       super(identifier, schema);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1074,11 +1062,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private class BasePolarisCatalogViewBuilder extends BaseMetastoreViewCatalog.BaseViewBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogViewBuilder(TableIdentifier identifier) {
       super(identifier);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1179,7 +1165,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           resolvedTableEntities == null
               ? resolvedEntityView.getResolvedPath(tableIdentifier.namespace()).getRawFullPath()
               : resolvedTableEntities.getRawParentPath();
-      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.get(0));
+      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.getFirst());
 
       if (base == null || !metadata.location().equals(base.location())) {
         // If location is changing then we must validate that the requested location is valid
@@ -1250,9 +1236,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             tableIdentifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, tableIdentifier, entity);
+        createTableLike(tableIdentifier, entity);
       } else {
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
 
@@ -1380,11 +1366,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     @Override
     public void doCommit(ViewMetadata base, ViewMetadata metadata) {
       // TODO: Maybe avoid writing metadata if there's definitely a transaction conflict
-<<<<<<< HEAD
-      LOGGER.debug("doCommit for {} with base {}, metadata {}", identifier, base, metadata);
-=======
-      LOG.debug("doCommit for view {} with base {}, metadata {}", identifier, base, metadata);
->>>>>>> 0f06b472d18e8f38657ec01d297c50e9f8460bda
+      LOGGER.debug("doCommit for view {} with base {}, metadata {}", identifier, base, metadata);
       if (null == base && !namespaceExists(identifier.namespace())) {
         throw new NoSuchNamespaceException(
             "Cannot create view %s. Namespace does not exist: %s",
@@ -1466,9 +1448,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             identifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, identifier, entity);
+        createTableLike(identifier, entity);
       } else {
-        updateTableLike(catalogId, identifier, entity);
+        updateTableLike(identifier, entity);
       }
     }
 
@@ -1529,7 +1511,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private void renameTableLike(
-      long catalogId, PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
+      PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
     LOGGER.debug("Renaming tableLike from {} to {}", from, to);
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(from, subType);
     if (resolvedEntities == null) {
@@ -1644,7 +1626,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
    * duplicate the logic to try to resolve parentIds before constructing the proposed entity. This
    * method will fill in the parentId if needed upon resolution.
    */
-  private void createTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void createTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedParent =
         resolvedEntityView.getResolvedPath(identifier.namespace());
     if (resolvedParent == null) {
@@ -1653,14 +1635,11 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           String.format("Failed to fetch resolved parent for TableIdentifier '%s'", identifier));
     }
 
-    createTableLike(catalogId, identifier, entity, resolvedParent);
+    createTableLike(identifier, entity, resolvedParent);
   }
 
   private void createTableLike(
-      long catalogId,
-      TableIdentifier identifier,
-      PolarisEntity entity,
-      PolarisResolvedPathWrapper resolvedParent) {
+      TableIdentifier identifier, PolarisEntity entity, PolarisResolvedPathWrapper resolvedParent) {
     // Make sure the metadata file is valid for our allowed locations.
     String metadataLocation = TableLikeEntity.of(entity).getMetadataLocation();
     validateLocationForTableLike(identifier, metadataLocation, resolvedParent);
@@ -1693,7 +1672,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     return !expectedParentLocation.relativize(childLocation).equals(childLocation);
   }
 
-  private void updateTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void updateTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getResolvedPath(identifier, entity.getSubType());
     if (resolvedEntities == null) {
@@ -1722,7 +1701,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private @NotNull PolarisMetaStoreManager.DropEntityResult dropTableLike(
-      long catalogId,
       PolarisEntitySubType subType,
       TableIdentifier identifier,
       Map<String, String> storageProperties,
@@ -1748,10 +1726,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private boolean sendNotificationForTableLike(
-      long catalogId,
-      PolarisEntitySubType subType,
-      TableIdentifier tableIdentifier,
-      NotificationRequest request) {
+      PolarisEntitySubType subType, TableIdentifier tableIdentifier, NotificationRequest request) {
     LOGGER.debug("Handling notification request {} for tableIdentifier {}", request, tableIdentifier);
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getPassthroughResolvedPath(tableIdentifier, subType);
@@ -1761,8 +1736,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     Preconditions.checkNotNull(notificationType, "Expected a valid notification type.");
 
     if (notificationType == NotificationType.DROP) {
-      return dropTableLike(
-              catalogId, PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
+      return dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
           .isSuccess();
     } else if (notificationType == NotificationType.CREATE
         || notificationType == NotificationType.UPDATE) {
@@ -1798,7 +1772,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       TableOperations tableOperations = newTableOps(tableIdentifier);
       String locationDir = newLocation.substring(0, newLocation.lastIndexOf("/"));
-      ;
+
       FileIO fileIO =
           refreshIOWithCredentials(
               tableIdentifier,
@@ -1813,7 +1787,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       // finally, validate that the metadata file is within the table directory
       validateMetadataFileInTableDir(
-          tableIdentifier, tableMetadata, CatalogEntity.of(resolvedParent.getRawFullPath().get(0)));
+          tableIdentifier,
+          tableMetadata,
+          CatalogEntity.of(resolvedParent.getRawFullPath().getFirst()));
 
       // TODO: These might fail due to concurrent update; we need to do a retry in those cases.
       if (null == existingLocation) {
@@ -1821,14 +1797,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             "Creating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
-        createTableLike(catalogId, tableIdentifier, entity, resolvedParent);
+        createTableLike(tableIdentifier, entity, resolvedParent);
       } else {
         LOGGER.debug(
             "Updating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
 
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
     return true;
@@ -1838,11 +1814,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // Pre-create namespaces if they don't exist
     for (int i = 1; i <= namespace.length(); i++) {
       Namespace nsLevel =
-          Namespace.of(
-              Arrays.stream(namespace.levels())
-                  .limit(i)
-                  .collect(Collectors.toList())
-                  .toArray(String[]::new));
+          Namespace.of(Arrays.stream(namespace.levels()).limit(i).toArray(String[]::new));
       if (resolvedEntityView.getPassthroughResolvedPath(nsLevel) == null) {
         Namespace parentNamespace = PolarisCatalogHelpers.getParentNamespace(nsLevel);
         PolarisResolvedPathWrapper resolvedParent =
@@ -1852,8 +1824,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     }
   }
 
-  private List<TableIdentifier> listTableLike(
-      long catalogId, PolarisEntitySubType subType, Namespace namespace) {
+  private List<TableIdentifier> listTableLike(PolarisEntitySubType subType, Namespace namespace) {
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
     if (resolvedEntities == null) {
       // Illegal state because the namespace should've already been in the static resolution set.
